--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 
 
       </div>
-      <div class="prx" style="left:10%;top:0%;width:70%;z-index:3">
-          <img src="img/deckard.svg" alt="deckard">
+      <div class="prx" style="left:10%;top:0%;width:100%;z-index:3">
+          <img src="https://github.com/live-art-studio/_assets-live-art-studio/blob/master/_img_live_art_studio_/1781994_817984651549242_1055697575_n.jpg" alt="deckard">
 
 
       </div>
@@ -61,7 +61,7 @@
         <div class="prx txt" style="left:10%;top:5%;width:40%;z-index:1;color:#777;font-size:28px;font-weight:bold;text-align:center">... comes from Journey<br>remixed by one of a kind,<br>digital shaman<br>from finlnd<br>mighty</div>
         <div class="prx" style="left:0%;top:25%;width:70%;z-index:2;color:#f80;font-size:128px;font-weight:bold;text-align:center">KOZILEK</div>
         <div class="prx txt" style="left:50%;top:5%;width:40%;z-index:1">
-            <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/192108531&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+            <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/192108531&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
         </div>
         <a href="#pan3" class="prx button" style="left:35%;top:60%;z-index:1">Back</a>
     </div>
